Some fixes and such
